[tool.poetry]
name = "carillon"
version = "0.1.0"
description = ""
authors = ["Riccardo Albertazzi <piano.vergato@gmail.com>"]

[tool.poetry.dependencies]
python = "~3.9"

music21 = "^6.5.0"
svgwrite = "^1.4.1"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
flake8 = "^3.8.4"
isort = "^5.7.0"
mypy = "^0.800"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
